--- a/casos/raider.html
+++ b/casos/raider.html
@@ -225,7 +225,7 @@
                 <div class="process-step">
                     <div class="process-number">6</div>
                     <div class="process-content">
-                        <h3>ðŸŽ¨ Acabados y Pátina</h3>
+                        <h3>🎨 Acabados y Pátina</h3>
                         <p>Aplicación de pátina verde oscuro especialmente diseñada para ambiente escolar con alta resistencia al desgaste.</p>
                         <ul>
                             <li>Pátina anti-vandálica</li>
@@ -253,7 +253,7 @@
                     </div>
 
                     <div class="challenge-item">
-                        <h3>ðŸ›¡ï¸ Resistencia al Vandalismo</h3>
+                        <h3>🛡️ Resistencia al Vandalismo</h3>
                         <div class="challenge-content">
                             <p><strong>Reto:</strong> Escultura en ambiente escolar requiere resistencia extrema a manipulación y posible vandalismo.</p>
                             <p><strong>Solución:</strong> Aleación especial más dura, anclaje reforzado y pátina anti-grafiti.</p>
@@ -264,7 +264,7 @@
 
                 <div>
                     <div class="challenge-item">
-                        <h3>ðŸŽ­ Expresión de Mascota</h3>
+                        <h3>🎭 Expresión de Mascota</h3>
                         <div class="challenge-content">
                             <p><strong>Reto:</strong> Traducir un diseño gráfico 2D en escultura 3D manteniendo la personalidad de la mascota.</p>
                             <p><strong>Solución:</strong> Múltiples iteraciones digitales probando diferentes ángulos y proporciones antes de la impresión final.</p>
