--- a/casos/roman.html
+++ b/casos/roman.html
@@ -494,7 +494,7 @@
                         <li><strong>Impacto COVID-19:</strong> Adaptación de procesos y ceremonias</li>
                     </ul>
 
-                    <h3>ðŸŽ¯ Aplicado en Proyectos Posteriores</h3>
+                    <h3>🎯 Aplicado en Proyectos Posteriores</h3>
                     <ul>
                         <li>Documentación automática via tiempo-lapse</li>
                         <li>Portal web para clientes con acceso a galería privada</li>
