--- a/contacto.html
+++ b/contacto.html
@@ -90,7 +90,7 @@
                         <span>ES • EN</span>
                     </div>
                     <div class="stat">
-                        <strong>ðŸŽ¯ 100%</strong>
+                        <strong>🎯 100%</strong>
                         <span>Transparencia</span>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                                 Miami, Florida, USA
                             </div>
                             <div class="contact-item">
-                                <strong>ðŸ• Horario:</strong>
+                                <strong>🕐 Horario:</strong>
                                 Lun-Vie: 9:00 AM - 6:00 PM EST
                             </div>
                         </div>
