--- a/cronologia.html
+++ b/cronologia.html
@@ -214,7 +214,7 @@
 
                     <div class="timeline-item q1" data-quarter="q1">
                         <div class="timeline-date">Q1 - Marzo 2025</div>
-                        <h3>ðŸŽ¯ Lanzamiento y Primeras Acciones</h3>
+                        <h3>🎯 Lanzamiento y Primeras Acciones</h3>
                         <h4>Marca Personal - Uldis López</h4>
                         <ul>
                             <li><strong>Publicar entrevista</strong> en Artcrónica sobre trayectoria personal</li>
@@ -275,7 +275,7 @@
 
                     <div class="timeline-item q2" data-quarter="q2" style="display: none;">
                         <div class="timeline-date">Q2 - Junio 2025</div>
-                        <h3>ðŸŽ¨ Consolidación Artística</h3>
+                        <h3>🎨 Consolidación Artística</h3>
                         <h4>Marca Personal - Uldis López</h4>
                         <ul>
                             <li><strong>Completar dossier</strong> con 20 proyectos documentados</li>
@@ -397,7 +397,7 @@
 
                     <div class="timeline-item q4" data-quarter="q4" style="display: none;">
                         <div class="timeline-date">Q4 - Diciembre 2025</div>
-                        <h3>ðŸŽŠ Cierre y planificación Futura</h3>
+                        <h3>🎊 Cierre y planificación Futura</h3>
                         <h4>Marca Personal - Uldis López</h4>
                         <ul>
                             <li><strong>Celebrar 10 años</strong> de RUN Art Foundry</li>
@@ -479,7 +479,7 @@
                 </div>
 
                 <div class="card">
-                    <h3>ðŸŽ¯ KPIs Anuales</h3>
+                    <h3>🎯 KPIs Anuales</h3>
                     <ul>
                         <li>Cobertura internacional: â‰¥1 medio</li>
                         <li>Proyectos documentados: 30</li>
