--- a/evidencias.html
+++ b/evidencias.html
@@ -191,7 +191,7 @@
 
                 <!-- Testimonios -->
                 <div class="mt-xxl" aria-labelledby="testimonios-title">
-                    <h2 id="testimonios-title">ðŸŽ¤ Testimonios de Artistas</h2>
+                    <h2 id="testimonios-title">🎤 Testimonios de Artistas</h2>
                     
                     <!-- Williams Carmona -->
                     <div class="testimonial" id="williams-carmona">
@@ -349,7 +349,7 @@
 
             <!-- Pestaña solo Testimonios -->
             <div class="tab-content" id="testimonios" style="display: none;">
-                <h2>ðŸŽ¤ Testimonios Verificables</h2>
+                <h2>🎤 Testimonios Verificables</h2>
                 <div class="callout callout-success">
                     <p><strong>Verificación:</strong> Todos los testimonios incluyen información de contacto verificable y proyectos específicos documentados.</p>
                 </div>
