--- a/lab/index.html
+++ b/lab/index.html
@@ -120,12 +120,12 @@
                         <h3>Nuestros Temas</h3>
                         <ul style="list-style: none; padding: 0;">
                             <li>ðŸ”¥ <strong>Procesos de fundición</strong> - Técnicas tradicionales y modernas</li>
-                            <li>ðŸŽ¨ <strong>Pátinas y Acabados</strong> - Química y aplicación</li>
+                            <li>🎨 <strong>Pátinas y Acabados</strong> - Química y aplicación</li>
                             <li>ðŸ—ï¸ <strong>Instalación de Esculturas</strong> - Ingeniería y logística</li>
                             <li>âš™ï¸ <strong>Herramientas y Equipos</strong> - Reseñas y tips</li>
                             <li>ðŸ“ <strong>Modelado y Moldeo</strong> - Desde arcilla hasta 3D</li>
                             <li>🌍 <strong>Sostenibilidad</strong> - Prácticas responsables</li>
-                            <li>ðŸŽ¯ <strong>Casos Problemáticos</strong> - Soluciones reales</li>
+                            <li>🎯 <strong>Casos Problemáticos</strong> - Soluciones reales</li>
                             <li>ðŸ“ˆ <strong>Tendencias de la Industria</strong> - Futuro del arte en metal</li>
                         </ul>
                     </div>
@@ -294,7 +294,7 @@
                 </div>
 
                 <div class="category-card">
-                    <div class="category-icon">ðŸŽ¨</div>
+                    <div class="category-icon">🎨</div>
                     <h3>Pátinas y Acabados</h3>
                     <p>Química, aplicación y mantenimiento de acabados en metal</p>
                     <div class="category-count">6 Artículos</div>
