--- a/run.html
+++ b/run.html
@@ -192,7 +192,7 @@
 
                 <!-- pátinas -->
                 <div class="card">
-                    <h3 class="card-title">ðŸŽ¨ pátinas y Acabados</h3>
+                    <h3 class="card-title">🎨 pátinas y Acabados</h3>
                     <p class="card-content">
                         Especialistas en Técnicas de patinado tradicionales y contemporáneas. Amplia gama de acabados para interior y exterior.
                     </p>
@@ -400,14 +400,14 @@
                         Cada proyecto incluye documentación fotográfica y videográfica completa del proceso, desde el molde inicial hasta la instalación final.
                     </p>
 
-                    <h3>ðŸŽ¯ Especialización Técnica</h3>
+                    <h3>🎯 Especialización Técnica</h3>
                     <p>
                         Nos enfocamos exclusivamente en Fundición artística de alta calidad. No somos una Fundición industrial - somos especialistas en arte.
                     </p>
                 </div>
 
                 <div>
-                    <h3>ðŸ¤ Relación Personalizada</h3>
+                    <h3>🤝 Relación Personalizada</h3>
                     <p>
                         Cada artista trabaja directamente con Uldis López, el fundador. No hay intermediarios ni procesos despersonalizados.
                     </p>
