--- a/acciones.html
+++ b/acciones.html
@@ -37,6 +37,7 @@
                     <button class="nav-toggle" aria-expanded="false" aria-controls="nav-list">☰</button>
                     
                     <ul class="nav-list" id="nav-list">
+                        <li><a href="index.html" class="nav-link">Inicio</a></li>
                         <li><a href="uldis.html" class="nav-link">Uldis López</a></li>
                         <li><a href="run.html" class="nav-link" title="RUN Art Foundry - Fundición Artística">RUN Art Foundry</a></li>
                         <li><a href="cronologia.html" class="nav-link">Cronología</a></li>
