🛠️ NUEVA: Página de Desarrollo con Sitemap Completo
✨ Nueva funcionalidad:
- dev.html: Página de desarrollo y herramientas
- Sitemap detallado de todas las páginas del sitio
- Documentación completa de estructura y contenido
- Enlaces rápidos para desarrollo y mantenimiento

📋 Contenido del sitemap:
- 14 páginas HTML documentadas con descripción detallada
- Estructura de archivos completa con comentarios
- Información técnica (CSS: 244 líneas, JS: 966 líneas)
- Enlaces de navegación y herramientas de desarrollo

🔗 Menú actualizado:
- Enlace '🛠️ Dev' agregado a todas las páginas
- Rutas relativas correctas en subdirectorios
- Acceso rápido desde cualquier página del sitio

🎯 Utilidad:
- Testing y debugging
- Documentación técnica centralizada
- Herramientas de desarrollo integradas
- Sitemap SEO-ready para buscadores

--- a/uldis.html
+++ b/uldis.html
@@ -69,6 +69,7 @@
                         <li><a href="lab/index.html" class="nav-link">RUN Lab</a></li>
                         <li><a href="acciones.html" class="nav-link">Acciones</a></li>
                         <li><a href="contacto.html" class="nav-link">Contacto</a></li>
+                        <li><a href="dev.html" class="nav-link">🛠️ Dev</a></li>
                     </ul>
                     
                     <div class="locale-switch" role="group" aria-label="Cambiar idioma">
