🎯 INICIO: Transformación a demo-venta según especificaciones
✅ PÁGINA DE INICIO REESTRUCTURADA:
- 🏠 Título: 'RUN Art Foundry: del taller al mundo'
- 📝 Subtítulo: micrositio estratégico para crecimiento internacional
- 🔘 Botones: 'Ver Casos Reales' + 'Explorar Evidencias'
- 📊 Mini-resumen: 3 bullets (Portafolio Internacional, Procesos Transparentes, Potencial Crecimiento)
- 🔍 Meta tags actualizados para SEO demo-venta

✅ ORGANIZACIÓN:
- 📁 docs/project/REESTRUCTURACION_DEMO_VENTA.md
- 📋 Plan de trabajo estructurado con 10 tareas
- 📖 README actualizado con nueva estructura

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Uldis López y RUN Art Foundry - Fundición artística especializada en bronce. Micrositio con investigación estratégica, casos de estudio y transparencia de procesos en Miami.">
-    <meta name="keywords" content="Uldis López, RUN Art Foundry, fundición, bronce, arte, Miami, pátinas, esculturas, monumentos">
+    <meta name="description" content="RUN Art Foundry: del taller al mundo. Descubre cómo Uldis López ha construido la fundición artística más confiable de Miami con casos reales y procesos transparentes.">
+    <meta name="keywords" content="Uldis López, RUN Art Foundry, fundición artística, bronce, Miami, casos de éxito, artistas internacionales, esculturas monumentales">
     <meta name="author" content="RUN Art Foundry">
     <meta name="robots" content="index, follow">
     <meta name="language" content="Spanish">
@@ -12,8 +12,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://runartfoundry.com/">
-    <meta property="og:title" content="RUN Art Foundry - Investigación y Propuesta Estratégica">
-    <meta property="og:description" content="Micrositio completo sobre Uldis López y RUN Art Foundry. Incluye biografía, casos de estudio, evidencias y análisis estratégico de la fundición artística en Miami.">
+    <meta property="og:title" content="RUN Art Foundry: del taller al mundo">
+    <meta property="og:description" content="Descubre la fundición artística de Uldis López en Miami. Casos reales, procesos transparentes y el potencial de crecimiento internacional de RUN Art Foundry.">
     <meta property="og:image" content="/assets/images/og-image.jpg">
     <meta property="og:locale" content="es_ES">
     <meta property="og:locale:alternate" content="en_US">
@@ -21,8 +21,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://runartfoundry.com/">
-    <meta property="twitter:title" content="RUN Art Foundry - Investigación y Propuesta Estratégica">
-    <meta property="twitter:description" content="Micrositio completo sobre Uldis López y RUN Art Foundry. Incluye biografía, casos de estudio, evidencias y análisis estratégico de la fundición artística en Miami.">
+    <meta property="twitter:title" content="RUN Art Foundry: del taller al mundo">
+    <meta property="twitter:description" content="Descubre la fundición artística de Uldis López en Miami. Casos reales, procesos transparentes y el potencial de crecimiento internacional de RUN Art Foundry.">
     <meta property="twitter:image" content="/assets/images/og-image.jpg">
 
     <!-- Canonical -->
@@ -76,7 +76,7 @@
     }
     </script>
 
-    <title>RUN Art Foundry - Uldis López | Investigación y Propuesta Estratégica</title>
+    <title>RUN Art Foundry: del taller al mundo | Uldis López Miami</title>
 </head>
 
 <body>
@@ -122,16 +122,16 @@
         <section class="hero" aria-labelledby="hero-title">
             <div class="container">
                 <h1 class="hero-title" id="hero-title">
-                    <span>Investigación & Propuesta Estratégica</span><br>
-                    <span style="color: var(--color-primary);">Uldis López · RUN Art Foundry</span>
+                    <span style="color: var(--color-primary);">RUN Art Foundry:</span><br>
+                    <span>del taller al mundo</span>
                 </h1>
                 <p class="hero-subtitle">
-                    Micrositio completo con análisis estratégico, casos de estudio y evidencias de la fundición artística más transparente de Miami
+                    Un micrositio estratégico que muestra lo que eres, lo que haces y cómo crecer internacionalmente
                 </p>
                 
                 <div class="btn-group">
-                    <a href="evidencias.html" class="btn">Ver Evidencias</a>
-                    <a href="casos/index.html" class="btn btn-secondary">Casos de Estudio</a>
+                    <a href="casos/index.html" class="btn">Ver Casos Reales</a>
+                    <a href="evidencias.html" class="btn btn-secondary">Explorar Evidencias</a>
                 </div>
             </div>
         </section>
@@ -144,20 +144,29 @@
             </div>
         </section>
 
-        <!-- Overview Section -->
-        <section class="container mt-xl" aria-labelledby="overview-title">
-            <h2 id="overview-title">Visión General del Proyecto</h2>
-            <div class="grid grid-2">
+        <!-- Executive Summary -->
+        <section class="container mt-xl" aria-labelledby="summary-title">
+            <h2 id="summary-title">RUN Art Foundry en 3 puntos</h2>
+            <div class="grid grid-3">
                 <div class="card">
-                    <h3>Objetivo Principal</h3>
+                    <div class="card-icon">🌍</div>
+                    <h3>Portafolio Internacional</h3>
                     <p class="card-content">
-                        Posicionar a Uldis López como referente en fundición artística y a RUN Art Foundry como la fundición más transparente y profesional de Miami, diferenciándose de la competencia a través de evidencias concretas y casos de estudio documentados.
+                        Artistas de renombre mundial confían sus obras monumentales a RUN Art Foundry
                     </p>
                 </div>
                 <div class="card">
-                    <h3>Enfoque Estratégico</h3>
+                    <div class="card-icon">🔍</div>
+                    <h3>Procesos Transparentes</h3>
                     <p class="card-content">
-                        Desarrollo integral de marca personal y corporativa mediante cronología estructurada, documentación de procesos, testimonios verificables y análisis competitivo que demuestre valor diferencial en el mercado.
+                        Documentación completa de cada etapa, desde el modelado hasta la instalación final
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="card-icon">📈</div>
+                    <h3>Potencial de Crecimiento</h3>
+                    <p class="card-content">
+                        Estrategia digital clara para expandir presencia y captar proyectos internacionales
                     </p>
                 </div>
             </div>
