feat: Separar documentación técnica del demo-venta
✅ PASO 9/10 COMPLETADO - Separación documentación técnica

🔄 Cambios realizados:
- Creada sección técnica separada en /technical/
- Movidos dev.html y acciones.html a documentación técnica
- Removidas referencias técnicas del menú demo-venta
- Creado índice técnico completo con 8 recursos principales
- Implementadas páginas de redirección automática
- Añadido acceso discreto desde footer (📋 Docs)

🎯 Resultado: Demo-venta enfocado únicamente en decisores
- Menú limpio: solo páginas comerciales visibles
- Documentación técnica accesible pero separada
- Navegación optimizada para presentación a Uldis

📋 Documentación técnica incluye:
- Herramientas desarrollo (dev.html)
- Plan acciones (acciones.html)
- Docs completa del micrositio
- Instrucciones integración
- Config Copilot
- Scripts automatización
- Reportes proyecto
- Gestión backups

Solo queda: Paso 10 - Implementar diseño visual demo-venta

--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
                         <li><a href="evidencias.html" class="nav-link">Evidencias</a></li>
                         <li><a href="casos/index.html" class="nav-link">Casos</a></li>
                         <li><a href="lab/index.html" class="nav-link">RUN Lab</a></li>
-                        <li><a href="acciones.html" class="nav-link">Acciones</a></li>
                         <li><a href="contacto.html" class="nav-link">Contacto</a></li>
-                        <li><a href="dev.html" class="nav-link">🛠️ Dev</a></li>
                     </ul>
                     
                     <div class="locale-switch" role="group" aria-label="Cambiar idioma">
@@ -343,9 +341,9 @@
                 <div class="footer-section">
                     <h3>Recursos</h3>
                     <ul style="list-style: none; padding: 0;">
-                        <li><a href="acciones.html">Acciones Prácticas</a></li>
-                        <li><a href="competencia.html">Análisis Competitivo</a></li>
                         <li><a href="cronologia.html">Cronología</a></li>
+                        <li><a href="evidencias.html">Evidencias</a></li>
+                        <li><a href="casos/index.html">Casos de Estudio</a></li>
                         <li><a href="assets/pdf/press-kit.pdf" target="_blank">Press Kit (PDF)</a></li>
                     </ul>
                 </div>
@@ -370,6 +368,8 @@
                     <a href="privacidad.html">Política de Privacidad</a>
                     <span> | </span>
                     <a href="accesibilidad.html">Accesibilidad</a>
+                    <span> | </span>
+                    <a href="technical/" style="opacity: 0.6; font-size: 0.85em;">📋 Docs</a>
                 </p>
             </div>
         </div>
